Text - uvod a cast motivace

--- a/texts/markdown/02. motivace.md
+++ b/texts/markdown/02. motivace.md
@@ -1,4 +1,16 @@
-# Motivace k vytvoreni aplikace #
+# Motivace k vytvoření aplikace #
+
+## Cílová skupina ##
+
+Hlavní motivací pro vytvoření této aplikace je snaha usnadnit práci vedoucím týmů, kteří paralelně pracují na více projektech. Tato činnost se může časem stát hodně nepřehlednou protože jsou úkoly roztroušeny na více místech a člověk pak může něco přehlédnout.
+
+Aplikace dobře poslouží i samostatným a junior vývojářům, kteří se řídí metodikou "Getting Things Done" (GTD). Poskytne jim přehledy dokončených úkolů za aktuální den, týden a měsíc. Zároveň mají možnost nastavit si deadline úkolů, což ne všechny verzovací servery umožňují. Snadno se tak dozví, kde jim už dochází čas.
+
+Na světě ale nejsou jen vývojáři, proto je aplikace schopná spravovat i obyčejné projekty, které nejsou nijak svázané s některým z verzovacích systémů. Tito uživatelé ale nejsou primární skupinou, pro kterou je aplikace určena, takže na trhu určitě najdou vhodnější nástroj.
+
+## Nabídka funkcí ##
+
+Většina funkcionality aplikace se točí kolem úkolů a projektů. 
+
 ## Nabidka funkci (popis verzovacich systemu, GTD) ##
-## Cilova skupina uzivatelu (vyvojari, lide praktikujici GTD) ##
 ## Proc ne webovou aplikaci ale desktopovou (reserse TS, rozsahlejsi aplikace v JS) ##
