--- a/texts/markdown/02. motivace.md
+++ b/texts/markdown/02. motivace.md
@@ -10,7 +10,130 @@ Na světě ale nejsou jen vývojáři, proto je aplikace schopná spravovat i ob
 
 ## Nabídka funkcí ##
 
-Většina funkcionality aplikace se točí kolem úkolů a projektů. 
+Většina funkcionality aplikace se týká úkolů a projektů. Stěžejním účelem aplikace je správa úkolů a jejich třídění do projektů. Existují v zásadě tři typy projektů:
 
-## Nabidka funkci (popis verzovacich systemu, GTD) ##
-## Proc ne webovou aplikaci ale desktopovou (reserse TS, rozsahlejsi aplikace v JS) ##
+- obyčejný GTD projekt
+- projekt hostovaný na serveru Assembla
+- projekt hostovaný na serveru Google Code
+- projekt hostovaný na serveru GitHub
+
+### Hostované projekty ###
+
+Projekty, které jsou uloženy na některém ze serverů, jsou vždy pevně svázány s některým z repozitářů uloženým na daném serveru. Poskytují tak možnost sychronizace úkolů uložených na serveru s těmi v aplikaci. Při synchronizaci se zároveň stáhne seznam uživatelů, milníků a štítků, které je pak možné dále využívat. Například je možné do milníku přiřadit nový úkol a změna se automaticky projeví i na serveru. To samé je možné u uživatelů.
+
+#### Porovnání verzovacích serverů ####
+
+Každý ze serverů poskytuje jiné funkce, tzn. i API jednotlivých služeb nebudou stejná. To přináší několik komplikací při vývoji nástroje, který má v sobě integrovat správu všech tří služeb.
+
+Každé ze trojice používaných API poskytuje jiný přístup k datům uloženým na serveru. Assembla a Google Code se spoléhá na rozhraní REST. Github používá pro přenos dat JSON pole, která jsou snadněji zpracovatelná JavaScriptem a pomalu se dostávají i do jiných programovacích jazyků. Nejlépe zdokumentované rozhraní API má jednoznačně Github, kde je vidět, že se o to někdo stará. V dokumentaci lze najít i chybové hlášky a všechny typy návratových polí. Github zároveň poskytuje největší paletu nabízených služeb a klientská aplikace se tak dostane kamkoliv. Nakonec i samotná webová aplikace Githubu běží nad tímto API.
+
+Nejhůře je na tom s dokumentací Assembla, kde polovina údajů chybí a postup práce je tak spíše pokus-omyl. Nikde například nejsou k nalezení chybové hlášky, které API vrací pokud požadavek z nějakého důvodu nevyhovuje. Vývojáři tak nezbývá nic jiného, než odpověď hledat pomocí vyhledávače.
+
+Google Code má dokumentaci obstojnou i když pod úrovní té na Githubu. Nestalo se mi ale, že bych tam nenašel něco, co jsem hledal, takže svůj účel plní dobře.
+
+Služby jsou rozdílné i z jiného úhlu pohledu. A sice z pohledu uživatele. Pro lepší přehlednost uvádím tyto rozdíly v následující tabulce:
+
+<table>
+	<thead>
+		<tr>
+			<th>Funkce</th>
+			<th>Assembla</th>
+			<th>GitHub</th>
+			<th>Google Code</th>
+		</tr>
+	</thead>
+	<tfoot>
+		<tr>
+			<th>Cena za měsíc (pro komerční projekty)</th>
+			<td>od 9 (1GB) do 99 dolarů (20GB)</td>
+			<td>od 7 (0,6GB) do 22 dolarů (2,4GB)</td>
+			<td>pouze open-source projekty</td>
+		</tr>
+	</tfoot>
+	<tbody>
+		<tr>
+			<th>Definování milníku (milestone)</th>
+			<td>ano</td><td>ano</td><td>ano</td>
+		</tr>
+		<tr>
+			<th>Přiřazení štítků k issue</th>
+			<td>ne</td><td>ano</td><td>ano</td>
+		</tr>
+		<tr>
+			<th>Více různých stavů issue</th>
+			<td>ano</td><td>ne</td><td>ano</td>
+		</tr>
+		<tr>
+			<th rowspan="2">Nastavení priority</th>
+			<td rowspan="2">ano</td><td rowspan="2">ne</td><td>ano</td>
+		</tr>
+		<tr>
+			<td>(jako speciální label)</td>
+		</tr>
+		<tr>
+			<th>Uložení aktivity u issue</th>
+			<td>ano</td><td>ne</td><td>ne</td>
+		</tr>
+		<tr>
+			<th>Přidání přílohy k issue</th>
+			<td>ano</td><td>ne</td><td>ano</td>
+		</tr>
+		<tr>
+			<th>Sledování aktivity v issues (notifikace)</th>
+			<td>ano</td><td>ne</td><td>ano</td>
+		</tr>
+	</tbody>
+</table>
+
+Kvůli těmto rozdílům byly nutné různé kompromisy, aby bylo možné aplikaci používat konzistentně bez ohledu na to, kde je projekt hostován. Ukazuje se, že GitHub má sice nejlepší dokumentaci ale ve funkcionalitě pokulhává. Assembla, jejíž dokumentace nestojí za nic, naopak poskytuje spousty funkcí navíc. Assembla je ale spíše zaměřená na komerční projekty, kdyžto zbylé dvě služby jsou orientovány spíše na open-source vývojáře. Google Code ani neumožňuje hostovat komerční projekty. GitHub sice ano, ale možnostmi je daleko za Assemblou.
+
+### Obyčejný GTD projekt ###
+
+Obyčejný projekt neposkytuje žádné speciální funkce, poskytuje pouze možnost roztřídit si úkoly podle nějaké jejich společné vlastnosti. Uživatel si tak může například rozdělit nějaký rozsáhlejší úkol na menší části. Tento projekt nemusí nutně souviset s vývojem software.
+
+#### Getting Things Done - GTD ####
+
+Tato metoda byla vytvořena americkým koučem Davidem Allenem, který ji popsal ve stejnojmenné knize. Neslouží přímo k organizaci času, ale spíše se orientuje organizaci práce a její plánování.
+
+Hlavní myšlenkou Allenovi práce je fakt, že lidský mozek není diář a není uzpůsoben k tomu, aby si pamatoval každý úkol a závazek, který je nutno splnit. Člověk pracuje lépe, pokud se nemusí věnovat tomu, aby si vzpomenul, co všechno musí udělat. 
+
+Jádrem této metody jsou proto různé seznamy, které obsahují veškeré úkoly, které je nutno vyřešit. Mozek se tak může soustředit čistě na práci a není rozptylován vzpomínáním na jiné nesouvisející úkoly.
+
+Celou metodu lze rozdělit do pěti kroků:
+
+- sběr úkolů
+- zpracování
+- zorganizování
+- zhodnocení
+- vykonání
+
+V aplikaci jsou zachyceny pouze prostřední tři kroky. Sběr úkolů je nutné provádět průběžně, tzn. nemusí to být v dosahu počítače. Tomuto účelu bohatě postačí nějaký papírový zápisník, příp. poznámky uložené v telefonu. Poslední krok už je plně v režii člověka. 
+
+V kroku "zpracování" dochází k přesunu úkolů z různých zdrojů (zápisník, poznámky) do jedné schránky - aplikace. Nesplnitelné úkoly se buď zahodí nebo se uloží na později. Splnitelné úkoly se buď vykonají, přiřadí někomu jinému nebo se uloží na později. O tom, zda se úkol vykoná hned nebo později, rozhoduje pravidlo 2 minut. Pokud vykonání úkolu zabere víc času než dvě minuty, je uložen k pozdějšímu zpracování. Zároveň pokud je krok komplexnější a k jeho splnění je potřeba víc než jeden krok, je tento rozdělen na víc částí a uložen jako projekt.
+
+V další fázi - zorganizování - dochází k rozdělení úkolů do dalších pěti oblastí:
+
+- další kroky
+- - realizovatelné, fyzicky viditelné činnosti, které vedou k nějakému výsledku
+- delegované úkoly
+- - úkoly přiřazené jiným lidem, u kterých čekáme na zpracování
+- projektové úkoly
+- úkoly uložené na později
+- naplánované úkoly
+- - úkoly, které mají pevně dané datum splnění (deadline)
+
+Čtvrtá fáze, která je zde označena jako zhodnocení, probíhá paralelně se všemi ostatními. Během ní člověk přehodnocuje, zda dělá to, co by dělat měl, k čemuž mu poslouží seznam nesplněných úkolů a projektů. Ke zhodnocení dochází také jednou za týden, kdy se upravuje seznam úkolů tak, aby byl aktuální.
+
+## Proč desktopovou aplikaci? ##
+
+V dnešní době už desktopové aplikace vycházejí z módy. Všechna data a aplikace se přesouvají do webového prostoru, kde je obsah přístupný odkudkoliv a je jedno přes jaké zařízení k němu přistupujeme. Můžeme tak svoje dokumenty vytvářet na stolním počítači a pak je upravovat na svém smartphonu, kterému stačí připojení k internetu. Používání webových úložišť má i svá úskalí, např. bezpečnost a spolehlivost.
+
+### Bezpečnost ###
+
+Data na internetu jsou obvykle uložena na nějakém vzdáleném serveru a my nemáme jistotu o tom, že k nim nemá přístup někdo nepovolaný. U desktopových aplikací lze bezpečnost snadno ohlídat minimálně pomocí hesla, příp. šifrováním obsahu na pevném disku. Pokud máme obsah uložený na jednom pevném disku, zvyšuje se pravděpodobnost ztráty dat, takže je nutné pravidelné zálohování. O to se u vzdáleného serveru obvykle starat nemusíme, tam je to samozřejmostí.
+
+Proč byla tedy zvolena klasická (desktopová) aplikace? Důvody jsou v zásadě dva - rešerše práce s vývojovým prostředím Titanium Studio a experiment, zda je možné napsat kompletní aplikaci pouze pomocí JavaScriptu. 
+
+### Využití JavaScriptu ###
+
+JavaScript se v poslední době opět vrací na výsluní a najdete ho téměř na každé webové stránce či aplikaci. Narozdíl od ostatních technologií jako je Flash nebo Silverlight, není závislý na platformě a funguje stejně dobře na operačním systému Windows, Linux nebo Mac. Jeho podpora je pevně zabudována do drtivé většiny webových prohlížečů a v poslední době se jeho podpora rozšiřuje i na mobilní zařízení. Žádná jiná technologie nemá takovou podporu. JavaScript je nejsnadnější způsob, jak udělat stránku interaktivní. Změnit to může snad jedině větší rozšíření HTML5, ale to bude ještě nějakou dobu trvat.
