--- a/texts/markdown/04. architektura.md
+++ b/texts/markdown/04. architektura.md
@@ -1,5 +1,5 @@
 # Architektura aplikace #
-rozdeleni do balicku, vyuziti API, diagramy ve vektorech (EPS)
+bezpecnost, rozdeleni do balicku, vyuziti API, diagramy ve vektorech (EPS)
 
 ## Titanium studio ##
 popis, vyhody a nevyhody, predstaveni API
