--- a/texts/markdown/03. metodika.md
+++ b/texts/markdown/03. metodika.md
@@ -1,5 +1,75 @@
-# Metodika vyvoje #
-(agilnejsi zpusob, bez zbytecnych dokumentu, ne Unified process)
+# Metodika vývoje #
+
+Pro vývoj aplikace v této bakalářské práci byla zvolena novější metodika vývoje, která je modernější a v mnoha ohledech jednodušší než dříve používaný Rational Unified Process. Hlavní výhoda spočívá v tom, že se nevytváří hromady dokumentů, jejichž vytvoření zabere spoustu času a ve finále je většina z nich zbytečná. 
+
+Rational Unified Process (RUP) má smysl u velkých projektů, na kterých pracuje větší tým lidí a které jsou hodně rozsáhlé. To ale není případ této aplikace. Nakonec ani v praxi už se RUP příliš nepoužívá a přechází se na agilnější metodiky, které nejsou tak těžkopádné a dokáží pružněji reagovat na změny v průběhu vývoje. Zástupcem takovýchto agilních metodik je např. SCRUM.
+
+SCRUM se používá u menšího týmu vývojářů, kde má každý danou nějakou pozici. Vývoj probíhá v krátkých iteracích - sprintech. Jeho délka je obvykle jeden týden až měsíc, záleží na velikosti projektu a na tom, jak často se mění požadavky.
+
+RUP a agilní metodiky se liší už ve způsobu sběru požadavků. Zatímco RUP je orientovaný na use-case modely, vytvářené obvykle v jazyce Unified Modeling Language (UML), SCRUM požadavky eviduje v Product Backlogu, kde nejsou nijak hierarchicky organizované (narozdíl od RUP) a jsou všechny na jednom místě. 
 
 ## User stories ##
-## Domenovy model ##
+
+Požadavky v rámci agilních metodik se nezapisují jako prosté úkoly, ale mají formát tzv. user story. Jejich tvar je pevně daný a skládá se ze tří částí:
+
+> Jako **Uživatel**, chci **Funkcionalitu** abych dostal **Bussiness Value**
+
+Takto formulovaný požadavek je pro člověka mnohem srozumitelnější, protože vidí proč daný úkol splnit a co to komu přinese. Má tak jistotu, že nedělá něco zbytečného. User story je takový krátký příbeh a jako takový je lidským mozkem snáz vnímaný.
+
+User stories nám poslouží i po ukončení vývoje - při akceptačních testech. Stačí projít seznam user stories a pokud najdeme jejich "odraz" v aplikaci, test byl úspěšný. Proto je lepší, aby user stories prošli schválením od klienta ještě před začátkem vývoje.
+
+V rámci této bakalářské práce byl vytvořen následující seznam user stories, který je pro lepší přehlednost rozdělen do skupin podle cílové skupiny. Každá skupina je uvedena názvem role, kde lomítko značí dědičnost. Jsou v něm zachyceny všechny požadavky, které by měla aplikace po ukončení vývoje splňovat.
+
+### Uživatel ###
+
+Jako uživatel chci:
+
+* používat aplikaci co nejjednodušeji, abych se mohl plně soustředit na přesné zadání úkolu
+* vytvářet úkoly, abych na nic nezapomněl
+* vytvářet projekty, abych si mohl úkoly třídit
+* vkládat okažité nápady do inboxu s tím, že je později zatřídím do projektu
+* označit úkol jako splněný
+* uložit úkol do archivu, kdybych se k němu chtěl někdy později vrátit
+* vyhodit úkol do koše, pokud se rozhodnu, že ho nebudu realizovat
+* přidávat úkolům štítky, abych si mohl odfiltrovat úkoly z určité oblasti
+* na konci týdne vědět, co všechno jsem za týden stihl, abych si mohl lépe naplánovat úkoly na příští týden
+* své nápady, na které teď nemám čas, přiřadit do skupiny s delším časovým horizontem, abych na ně nezapomněl a mohl je později rozvíjet
+* vytisknout svoje úkoly, abych je mohl mít neustále na očích
+
+### Uživatel / vývojář ###
+
+Jako vývojář chci:
+
+* importovat projekty a úkoly z GitHubu (dále jen GH)
+* být informován o blížící se deadline úkolů
+* aby aplikace neumožňovala přístup neoprávněným osobám k mým úkolům
+* spárovat úkol s konkrétním commitem do repozitáře
+* exportovat úkol a poslat ho jednoduše kolegovi v týmu, aby ho nemusel ručně přepisovat
+
+### Uživatel / vývojář / senior ###
+
+Jako senior vývojář chci: 
+
+* párovat repozitáře z GH s mými projekty, abych mohl sledovat, jak práce na projektu pokračuje
+* párovat issues z GH s mými úkoly, abych s nimi mohl párovat commity do GitHubu
+* nastavit úkolům čas, kdy mají být splněny 
+* delegovat úkoly junior vývojářům
+* přiřadit úkol do konkrétního milníku, abych měl přehled o tom, kolik toho ještě zbývá dokončit
+* být informován o změnách v mých repozitářích na GH
+* uzavřít projekt, po jeho dokončení příp. ukončení
+* přidávat štítky k úkolům, abych je mohl lépe třídit a filtrovat
+* být upozorněn na neaktivní otevřené projekty, abych mohl urgovat dokončení úkolů na junior vývojářích
+* mazat úkoly, které se nakonec realizovat nebudou nebo které již byly dokončeny
+* zpřesňovat zadání úkolů, pokud dojde k nejasnostem
+
+### Uživatel / vývojář / junior ###
+
+Jako junior vývojář chci:
+
+* být informován o nově přiřazených úkolech od senior vývojářů
+* označit úkol jako splněný
+
+## Doménový model ##
+
+V rámci analýzy byl vytvořen doménový model, který znázorňuje vztahy jednotlivými entitami zastoupenými v aplikaci. Model je vytvořen v jazyce UML (Unified Modeling Language).
+
