Text - metodika (domenovy model)

--- a/texts/markdown/03. metodika.md
+++ b/texts/markdown/03. metodika.md
@@ -73,3 +73,76 @@ Jako junior vývojář chci:
 
 V rámci analýzy byl vytvořen doménový model, který znázorňuje vztahy jednotlivými entitami zastoupenými v aplikaci. Model je vytvořen v jazyce UML (Unified Modeling Language).
 
+![Doménový model](https://github.com/saterond/GitHubGTDTool/raw/master/docs/domain-model.png)
+
+### Issue ###
+Entita reprezentující jeden úkol, uložený v aplikaci. Má definované jméno (název problému) a popis, který obsahuje konkrétní popis problému
+
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>title</td><td>název problému</td></tr>
+	<tr><td>description</td><td>detailní popis problému</td></tr>
+</table>
+
+### issueState ###
+Úkoly (issues) existují v aplikaci v různých stavech. Každý stav určuje jak bude aplikace s daným úkolem zacházet.
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>active</td><td>na úkolu se pracuje</td></tr>
+	<tr><td>completed</td><td>úkol byl splněn</td></tr>
+	<tr><td>archived</td><td>úkol byl uložen do archivu</td></tr>
+	<tr><td>deleted</td><td>úkol byl smazán</td></tr>
+	<tr><td>trashed</td><td>úkol byl přesunout do koše</td></tr>
+</table>
+
+### Label ###
+Štítky (label) slouží k filtraci úkolů (issues) a projektů (projects). Obvykle popisují nějakou obecnější vlastnost dané entity, podle které má smysl je filtrovat. To může být například priorita, programovací jazyk nebo náročnost.
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>title</td><td>text štítku</td></tr>
+</table>
+
+### Milestone ###
+Milestone se do češtiny překládá jako milník. Je to nějaký bod v čase, do kterého musí být dokončená určitá množina úkolů (issues). Lze sledovat procentuální dokončení.
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>title</td><td>Název milníku</td></tr>
+	<tr><td>dueDate</td><td>Do kdy musí být milník splněn</td></tr>
+</table>
+
+### User ###
+Uživatel (user) vystupuje v aplikaci jako člen týmu, kterému je možné přiřadit nějaký úkol (issue).
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>username</td><td>uživatelské jméno</td></tr>
+	<tr><td>email</td><td>e-mailová adresa uživatele</td></tr>
+</table>
+
+### Project ###
+Úkoly (issues) jsou uspořádané do projektů, které mají definované jméno a popis. I z úkolu se může stát projekt pokud je k jeho dokončení potřeba víc než jeden krok (podle GTD).
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>name</td><td>název projektu</td></tr>
+	<tr><td>description</td><td>popis projektu</td></tr>
+</table>
+
+### Area ###
+Projekty (project) lze zařadit do nějaké oblasti (area), což může být např. škola, práce, vzdělávání apod. Cílem je zpřehlednění seznamu projektů.
+
+### projectState ###
+Projekt může být buď aktivní, tzn. že se na něm pracuje, nebo hotový (completed).
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>active</td><td>aktivní</td></tr>
+	<tr><td>completed</td><td>dokončený</td></tr>
+</table>
+
+### projectType ###
+Každý projekt má definovaný nějaký typ, podle kterého se určí na jaký server se má synchronizovat. Pokud jde o obyčejný projekt (default) nesynchronizuje se nikam, všechny úkoly zůstavají pouze na lokálním úložišti.
+<table>
+	<tr><th>Atributy</th><th>Poznámky</th></tr>
+	<tr><td>default</td><td>obyčejný GTD projekt</td></tr>
+	<tr><td>Assembla</td><td>projekt hostovaný na serveru Assembla.com</td></tr>
+	<tr><td>GoogleCode</td><td>projekt hostovaný na serveru Google Code</td></tr>
+	<tr><td>GitHub</td><td>projekt hostovaný na serveru GitHub.com</td></tr>
+</table>
