Texty - architektura + diagram v EPS

--- a/texts/markdown/04. architektura.md
+++ b/texts/markdown/04. architektura.md
@@ -1,5 +1,32 @@
 # Architektura aplikace #
-bezpecnost, rozdeleni do balicku, vyuziti API, diagramy ve vektorech (EPS)
+
+## Rozdělení do balíčků ##
+Aplikaci lze rozdělit do několika balíčků, i když toto rozdělení není tak patrné jako například u Javy. Jako vzor pro celkovou architekturu bylo zvoleno MVC (model-view-controller), kde je oddělená prezentační část od výkonné a obsahové. Nicméně to vyžadovalo pár kompromisů protože JavaScript není primárně objektový jazyk.
+
+Celá aplikace využívá ke svému běhu knihovnu PrototypeJS, díky které lze snadno definovat objekty a omezeně i dědičnost mezi nimi. V prezentační části se navíc využívá knihovna Script.aculo.us, která je postavena na dříve zmíněném PrototypeJS a která umožňuje snadnější vytváření efektů a různých animací.
+
+Následující diagram znázorňuje rozdělení aplikace do balíčků.
+
+> Class diagram.eps
+
+## Bezpečnost ##
+
+U webových aplikací je obvykle kladen velký důraz na samotné zabezpečení aplikace proti vnějšímu zásahu ať už za účelem získání soukromých informací nebo poškození aplikace. Mnou vytvářená aplikace sice není přímo webová ale i tak byla otázka zabezpečení důležitá. Nejzranitelnější částí aplikace je samotná komunikace se vzdálenými servery jednotlivých verzovacích systémů. Není totiž možné použít pokročilé zabezpečovací techniky jako je OAuth2 (používá Github) nebo AuthSub proxy (Google Code). V obou případech je totiž nutnou podmínkou fixní URL, na které klientská aplikace běží. Mnou vytvářená aplikace běží přímo na uživatelově počítači a ne někde na vzdáleném serveru. Jedinou možností zabezpečení aplikace tak zůstala Basic authentication, u které je pouze nutné připojit speciální hlavičku „Authorization“ přímo do odesílaného požadavku, jejímž obsahem je slovo „Basic“ a zahashované spojení uživatelského jména a hesla kódováním Base64. Tento hash lze snadno přeložit zpět na čitelnou formu, protože účelem toho algoritmu není šifrování přenášených dat ale pouze možnost zapsat binární data do tisknutelných znaků ASCII.
+
+Každý z trojice verzovacích systémů (Assembla, Github, Google Code) používá jiný způsob zabezpečení komunikace (tzn. autentizaci a autorizaci). U serveru Assembla existuje jediný způsob a sice použití Basic Authentication, které vlastně žádné zabezpečení neposkytuje, slouží pouze k autentizaci požadavku na API.
+ 
+V případě služby Github je situace komplikovanější. Upřednostňovaná forma přihlášení k serveru je OAuth2, což je protokol sloužící externím aplikacím k požádání o autorizaci bez toho, aby získaly heslo uživatele. Je preferována před Basic Authentication protože umožňuje omezit přístup jen k určitým datům a uživatel může tento přístup kdykoliv zrušit. Postup získání tohoto povolení je jednoduchý. Vývojář nejdřív svou aplikace zaregistruje a tím získá dva údaje: unikátní ID klienta a tajné heslo, které by nemělo být nikde zveřejněno. Pomocí těchto dvou údajů se klientská aplikace autentifikuje u serveru a po vyplnění přihlašovacího jména a hesla je uživatel přesměrován zpět do klientské aplikace s náhodně vygenerovaným tokenem (buď přímo v URL, nebo v hlavičce odpovědi). Tento token je pak používán u každého požadavku na server až do ukončení session. Tento postup je ale pro aplikace běžící na desktopu nepoužitelný protože není kam uživatele přesměrovat. Proto Github zároveň podporuje i Basic Authentication.
+
+Google Code používá službu založenou na podobném principu jako je OAuth2. Zde ale není nutná registrace aplikace přímo na serveru. Aplikace, která vyžaduje přístup k soukromým datům uživatele, a nemůže tedy využit anonymního přístupu, přesměruje uživatele na speciální URL, kde se vyplní uživatelské jméno a heslo a uživatel je posléze přesměrován zpět do klientské aplikace s vygenerovaným AuthSub tokenem uloženým v odpovědi. Obsahem požadavku jsou čtyři údaje:
+
+1.	next - URL, na kterou má být uživatel přesměrován (URL aplikace)
+2.	scope – určí, že je požadován vstup do Google Code
+3.	secure – určuje, zda klient požaduje zabezpečený token
+4.	session – určuje, zda může být token konvertován na multi-use (session) token
+
+Pro aplikace běžící na desktopu je ale nutné použít nižší úroveň zabezpečení – ClientLogin. Ten spočívá v odeslaní požadavku ve specifikovaném formátu na danou URL. V odpovědi, pokud je autentizace úspěšná, jsou navrácena tři alfanumerické kódy. Klientskou aplikace ale zajímá pouze ten poslední, který je použit jako autorizační token při odesílání požadavku (podobně jako se u Basic authentication odesílá Base64 hash). Kamenem úrazu této metody je ale úvodní požadavek, ve kterém je odesláno uživatelské jméno a heslo v čitelné formě přímo v požadavku (konkrétně v POST), takže pokud by provoz na síti někdo odposlouchával, získá snadno přístup do účtu uživatele. Bohužel jiná forma autentizace pro desktopové aplikace neexistuje ani u jedné z těchto tří služeb.
+
+## Využití API Titanium Studio ##
 
 ## Titanium studio ##
 popis, vyhody a nevyhody, predstaveni API
