Texty - architektura + zdroje

--- a/texts/markdown/04. architektura.md
+++ b/texts/markdown/04. architektura.md
@@ -26,7 +26,43 @@ Google Code používá službu založenou na podobném principu jako je OAuth2. 
 
 Pro aplikace běžící na desktopu je ale nutné použít nižší úroveň zabezpečení – ClientLogin. Ten spočívá v odeslaní požadavku ve specifikovaném formátu na danou URL. V odpovědi, pokud je autentizace úspěšná, jsou navrácena tři alfanumerické kódy. Klientskou aplikace ale zajímá pouze ten poslední, který je použit jako autorizační token při odesílání požadavku (podobně jako se u Basic authentication odesílá Base64 hash). Kamenem úrazu této metody je ale úvodní požadavek, ve kterém je odesláno uživatelské jméno a heslo v čitelné formě přímo v požadavku (konkrétně v POST), takže pokud by provoz na síti někdo odposlouchával, získá snadno přístup do účtu uživatele. Bohužel jiná forma autentizace pro desktopové aplikace neexistuje ani u jedné z těchto tří služeb.
 
-## Využití API Titanium Studio ##
-
 ## Titanium studio ##
-popis, vyhody a nevyhody, predstaveni API
+
+### Představení ###
+Samotné Titanium Studio je pouze vývojové prostředí, které usnadňuje práci s platformou Titanium. Tato není závislá na operačním systému. Je tak možné vytvářet aplikace zároveň pro Windows, Linux nebo Mac. Stejně tak pokud se rozhodneme vytvořit mobilní verzi dané aplikace, je možné některé části kódu znovupoužít a předělat jen grafickou stránku aplikace.
+
+Jádrem celé platformy je API, které je přístupné přes globální objekt Titanium. Přes něj se dají snadno vytvářet další okna aplikace, různá menu a poskytuje snadný přístup k souborům uloženým na filesystému nebo k tabulkám v databázi. 
+
+#### Databáze ####
+Jako databázový engine se používá SQLite, kde je celá databáze uložena v jednom souboru a tím se snadno zálohuje nebo přenáší na jiný počítač. O připojení k databázi se postará globální objekt, nám stačí znát její jméno, které si můžeme předem určit. Po připojení k ní získáme objekt, na kterém už lze pokládat dotazy na databázi v jazyce SQL. Jak může takové volání vypadat, ukazuje následující příklad:
+
+> DB.execute("INSERT INTO images (title, description) VALUES (?, ?)", 'test', 'description');
+
+V tomto příkladě je vidět obrana proti útoku SQL Injection, které je realizováno voláním metody s argumenty, které jsou následně escapovány.
+
+#### AJAX ####
+Další velmi důležitou součástí API je mechanismus pro asynchronní volání vzdálených serverů - AJAX. Provádění těchto volání má jednu velkou výhodu oproti tomu samému volání v prohlížeči – není zde problém s cross-domain policy, což je v zásadě ochrana proti vykonávání JavaScriptu na jiném serveru, kterou mají prohlížeče zabudovánu v sobě. 
+
+Během volání je možné sledovat odpovědi serveru a můžeme si definovat metody, které na tyto události zareagují. Máme také plnou kontrolu nad tím jaká data na server posíláme a jakou metodou v rámci protokolu HTTP se tak stane. API verzovacích serverů totiž rozlišují požadavky i podle této metody. Takže pokud chceme něco na serveru smazat musíme použít metodu DELETE. Pokud naopak chceme založit něco nového (úkol, projekt, milník), použijeme metodu PUT. K běžnému stahování obsahu - čtení - nám postačí metoda GET příp. POST.
+
+Protože API služeb Assembla a Google Code běží na architektuře REST, je nutné mít možnost posílat voláním i soubory, konkrétně ve formátu XML. Tento požadavek byl poměrně problematický, protože v dokumentaci API nebylo toto dostatečně popsáno. Naštěstí jsou na internetu různé tutoriály, které pomohou a navedou člověka správným směrem. Samotné sestavování AJAXového volání je hodně low-level a člověk musí řešit spousty technickým věcí. Například u zmiňovaného posílání souborů musíme ručně sestavit hlavičku požadavku, aby došel ve správném tvaru na server. Server Assembla například soubor nepřijme, pokud ve volání nepřijde hlavička:
+
+> Accept : application/xml
+
+#### Vytváření oken a nabídek ####
+Každá aplikace na desktopu sestává z více částí. Hlavní viditelnou částí je samotné okno aplikace. V prostředí Titanium Studio si můžeme definovat jak toto okno bude velké, zda bude maximalizované a jak s ním bude moct uživatel manipulovat. Všechny tyto volby jsou uloženy v XML souboru, takže se dají snadno upravovat.
+
+Pokud potřebujeme za běhu aplikace vytvořit nové okno, umožní nám to zmiňované API. Nastavíme si jeho velikost, polohu, obsah (obvykle HTML soubor) a další volby. Titanium ho pak vykreslí a my s ním můžeme dále pracovat. Všechny Javascriptové soubory, které chceme v novém okně využít, musíme vložit do toho HTML souboru. A to i když jsou již vloženy do hlavního okna aplikace. Jediné, co se vloží automaticky, je globální objekt Titanium, který nám zpřístupňuje API.
+
+Většina aplikací na desktopu mívá hlavní menu v šedém pruhu hned na vrchu okna aplikace. I v rámci Titanium Studia je možné toto menu vytvořit. Funguje to jednoduše. Na API zavoláme metodu Titanium.UI.createMenu, která nám vytvoří objekt, reprezentující celé menu. Do něj pak můžeme buď přidávat další podmenu nebo přímo jednotlivé položky. Menu funguje na principu událostí, takže pokud uživatel na některou z položek klikne, dojde k zavolání metody definované při zakládání dané položky.
+
+### Výhody a nevýhody ###
+Mezi hlavní výhody využívání Titanium API patří rozhodně:
+
+* snadná práce s databází
+* možnost posílat AJAXová volání na vzdálené servery bez omezení
+* snadná práce s UI aplikace (vytváření dalších oken a nabídek)
+
+Velkou nevýhodou je rozhodně debugování (nalézání a oprava chyb) aplikace. V rámci běhu aplikace sice máme možnost sledovat výpis hlášení v okně konzole, ale mnohé chyby se zde neobjeví a aplikace prostě zamrzne. Vývoj se tak občas dost zpomaluje, protože hloupé chyby se hledají obtížně a jeden malý překlep může způsobit velké problémy.
+
+### Využití API v aplikaci ###
