--- a/texts/markdown/09. zdroje.md
+++ b/texts/markdown/09. zdroje.md
@@ -3,3 +3,5 @@ http://cs.wikipedia.org/wiki/Getting_Things_Done
 http://wild-web.eu/blog/scrum-metoda-agilni-programovani/
 http://testovanisoftwaru.cz/manualni-testovani/modely-zivotniho-cyklu-softwaru/rup/
 http://soch.cz/blog/management/agile/proc-piseme-user-story/
+
+http://www.smokycogs.com/blog/titanium-tutorial-how-to-upload-a-file-to-a-server/ (architektura - TS - AJAX)
