Text - dokonceni architektury

--- a/texts/markdown/04. architektura.md
+++ b/texts/markdown/04. architektura.md
@@ -66,3 +66,25 @@ Mezi hlavní výhody využívání Titanium API patří rozhodně:
 Velkou nevýhodou je rozhodně debugování (nalézání a oprava chyb) aplikace. V rámci běhu aplikace sice máme možnost sledovat výpis hlášení v okně konzole, ale mnohé chyby se zde neobjeví a aplikace prostě zamrzne. Vývoj se tak občas dost zpomaluje, protože hloupé chyby se hledají obtížně a jeden malý překlep může způsobit velké problémy.
 
 ### Využití API v aplikaci ###
+Vytvořená aplikace je pevně spojená s Titanium API a nemůže bez něj prakticky existovat. Mezi nejdůležitější využíváné funkce patří rozhodně přístup k databázi a filesystému. To jsou funkce, které by byly bez API poměrně obtížně realizovatelné. Je toho ale mnohem víc. Vzhledem k tomu, že jedním z poslání aplikace je synchronizace se vzdálenými servery, je hojně využívána i část síťová, tzn. AJAXová volání. 
+
+Protože JavaScript není úplně objektový jazyk a některé konstrukce nejsou možné, pomohlo Titanium API i zde. Jde například o předávání globálních objektů, aby nebylo potřeba je pokaždé vytvářet znovu, což by bylo velké plýtvání prostředky a nejspíš by to výrazně zpomalilo celou aplikaci. Objekty se proto po vytvoření uloží do globální úložiště (ač je to v rozporu s principy objektového programování), které je plně v režii Titanium API a odkud je možné si je kdykoliv vyžádat a vykonávat na nich operace. Takto je například uložené spojení s databází nebo objekt starající se o synchronizaci se vzdálenými servery.
+
+Jak je API v aplikace využíváno, bude nejlépe patrné z nějakého příkladu. Následující seznam ukazuje workflow přidání nového úkolu do projektu, který je svázán s repozitářem na serveru GitHub. Pro lepší přehlednost je vždy nejdříve uvedena entita, která danou operaci provede.
+
+1. uživatel: klikne na tlačítko "New issue"
+2. systém: zavolá funkci, která obsluhuje dané tlačítko
+3. API: zobrazí dialog s obsahem, který definoval handler v předchozím kroku
+3. 1. API: načte z databáze uživatele a milníky daného projektu
+4. uživatel: vyplní formulář v dialogu a odešle ho tlačítkem "Save"
+5. systém: vytáhne z formuláře vyplněná data a vyžádá si od API objekty reprezentující zvoleného uživatele a/nebo milníku
+5. 1. API: načte z databáze uživatele a předá ho modelové třídě
+5. 2. systém: modelová třída uživatele naparsuje do objektu a předá ho zpět
+6. systém: uzavře dialog zavoláním API
+7. systém: nově vytvořený objekt reprezentující úkol je předán synchronizační třídě
+7. 1. systém: objekt je naparsován do formátu JSON, který používá server GitHub pro komunikaci
+7. 2. API: pomocí objektu Titanium.Network.HTTPClient je řetězec s JSON odeslán na server a vrácený výsledek je poslán zpět do synchronizační třídy
+7. 4. systém: záznam o úkolu je aktualizován v databázi o údaje vrácené ze serveru
+8. systém: aktualizuje výpis úkolů daného projektu
+
+Jak je vidět z příkladu, API je skutečně integrální součástí aplikace a poskytuje spousty důležitých funkcí, které hodně zrychlí a usnadní vývoj celé aplikace.
