--- a/texts/markdown/05. nasazeni.md
+++ b/texts/markdown/05. nasazeni.md
@@ -1,3 +1,12 @@
-# Nasazeni aplikace #
+# Nasazení (deployment) aplikace #
+Titanium Studio je deklarované jako multiplatformní a neměl by tedy být problém s přenosem vytvořené aplikace na jiný operační systém. Bohužel dle získané zkušenosti tomu tak není. Aplikace byla primárně vyvíjena na operačním systému Windows 7, kde se neobjevily žádné větší problémy. Ty ale nastaly při pokusu o spuštění na jiné platformě. Pokus o nasazení byl proveden na dalších dvou různých operačních systémech. Šlo o operační systém Debian, jakožto zástupce Linuxu, a Mac OS X. Ani na jednom ze zmiňovaných systémů se nepodařilo aplikaci plně zprovoznit. 
 
-multiplatformnost
+## Linux ##
+Test nasazení byl proveden na virtuálním stroji s nainstalovaným operačním systémem Debian ve verzi 6.0.3 (i386).
+
+Zde se ukázalo jako nemožné samotné spuštění vývojového prostředí Titanium Studio, ve kterém se aplikace kompiluje. Možnou příčinou je fakt, že aplikace je distribuována v archivu typu zip, který není primárně určen pro Linux a nezachovává symbolické odkazy. Veškeré pokusy o nápravu skončily neúspěchem. Podle oficiálního fóra má tyto problémy více uživatelů, takže by mělo dojít k nápravě. Zatím se tak ale nestalo.
+
+## Mac OS X ##
+Testování na této platformě bylo poměrně problematické, protože odpovídající operační systém nebyl k dispozici. Pokusy o nasazení byly prováděny pouze na soukromém počítači vedoucího této práce a lze říci, že nebyly 100% úspěšné. Narozdíl od Linuxu sice bylo možné nainstalovat a spustit vývojové prostředí ale se samotnou aplikací už to bylo horší. Ani po mnoha pokusech se nezdařilo ji plně spustit. Neustále se objevovaly chyby na úrovni OS, které byly obtížně odstranitelné. 
+
+O multiplatformnosti Titanium Studia lze tedy oprávněně pochybovat.
