Texty - rozpracovani testovani

--- a/texts/markdown/06. testovani.md
+++ b/texts/markdown/06. testovani.md
@@ -1,8 +1,21 @@
-# Testovani aplikace #
-## Problemy s asynchronnim testovanim (API sluzeb) ##
+# Testování aplikace #
+Každý správný vývojový cyklus software by měl obsahovat fázi testování. Aplikace lze testovat ve více vlnách, kdy se pokaždé provádí jiný typ testů. Obecně lze testy rozdělit do těchto dvou hlavních skupin - whitebox a blackbox.
 
-## Vizualizace zatezovych testu ##
+Blackbox testy testují aplikaci zvenku a nepotřebují vědět, co se děje uvnitř. Proto se testy označují jako "blackox" - aplikace je pro nás černou skříňkou a máme k dispozici pouze dva otvory - vstup a výstup. Do aplikace pošleme nějaký vstup a očekáváme určitý výstup. Pokud výstup splňuje očekávání, test byl úspěšný. Hlavní výhodou těchto testů je jejich jednoduchost, protože nepotřebujeme znát konkrétní obsah tříd a metod uvnitř aplikace. Do blackbox testů můžeme zařadit tyto testy:
+
+* testy rozhraní (Selenium)
+* akceptační
+* zátežové
+
+Naproti tomu whitebox testy vyžadují znalost kódu aplikace a jsou pevněji svázány s implementací uvnitř. Tyto testy jsou mnohem konkrétnější a obvykle testují menší celky aplikace (balíčky -> třídy -> metody). Postup testování může být dvojí. Buď testujeme nejdřív největší celky a postupně se zanořujeme, nebo naopak postupujeme od nejmenších jednotek po ty největší. Těmto testům se říká jednotkové (angl. unit testy). Do kategorie whitebox testů spadají také integrační testy, které ověřují, zda spolu jednotlivé komponenty aplikace komunikují tak, jak mají.
+
+## Použitý způsob testování ##
+Testování této aplikace nebylo tak snadné jako u webových aplikací. Některé testy nebyly ani realizovatelné (např. testy rozhraní pomocí nástroje Selenium). 
+
+## Testování asynchronních volání ##
+
+## Zátěžové testy ##
 (grafy zavislosti poctu issues na jejich vypis)
 
-## Doporuceni do dalsiho vyvoje ##
+## Doporučení do dalšího vývoje ##
 (na zaklade testu)
