--- a/texts/markdown/06. testovani.md
+++ b/texts/markdown/06. testovani.md
@@ -10,12 +10,30 @@ Blackbox testy testují aplikaci zvenku a nepotřebují vědět, co se děje uvn
 Naproti tomu whitebox testy vyžadují znalost kódu aplikace a jsou pevněji svázány s implementací uvnitř. Tyto testy jsou mnohem konkrétnější a obvykle testují menší celky aplikace (balíčky -> třídy -> metody). Postup testování může být dvojí. Buď testujeme nejdřív největší celky a postupně se zanořujeme, nebo naopak postupujeme od nejmenších jednotek po ty největší. Těmto testům se říká jednotkové (angl. unit testy). Do kategorie whitebox testů spadají také integrační testy, které ověřují, zda spolu jednotlivé komponenty aplikace komunikují tak, jak mají.
 
 ## Použitý způsob testování ##
-Testování této aplikace nebylo tak snadné jako u webových aplikací. Některé testy nebyly ani realizovatelné (např. testy rozhraní pomocí nástroje Selenium). 
+Testování této aplikace nebylo tak snadné jako u webových aplikací. Některé testy nebyly ani realizovatelné (např. testy rozhraní pomocí nástroje Selenium), protože aplikace není spustitelná v prohlížeči. Toto omezení způsobuje právě ten globální objekt Titanium, který není v prostředí prohlížeče k dispozici a aplikace se tak stává nepoužitelnou.
+
+Pro testování byla využita JavaScriptová knihovna jsUnity, pomocí které jdou poměrně snadno vytvářet jednotkové testy. Poskytuje jednak běhové prostředí a hlavně assertovací metody, které ověří výsledek testu. Knihovnu je potřeba trochu poupravit, aby výsledek testů vypsala do okna a do výstupu, kde by se výsledek ztratil v záplavě runtime hlášení. Není to nijak velký zásah, stačí překrýt metodu log tímto způsobem:
+
+> jsUnity.log = function(message) {
+>    document.write(message + "\n&lt;br&gt;");
+> };
+
+Testy jsou seskupeny v objektech, které se spouští metodou *jsUnity.run()*. Aby nebyly při každém testu znovu zakládány všechny objekty, vytvoří se předem a během testů už se na nich pouze volají metody. Korektní postup je sice jejich zakládání před každým testem v metodě *setUp()*, ale tento způsob se ukázal jako hodně pomalý a bylo od něj upuštěno. Nejpomalejší operace je určitě založení spojení s databází, která je potřeba u většiny testů a protože testy mají být hlavně rychlé, byl nutný nějaký kompromis.
 
 ## Testování asynchronních volání ##
+V aplikaci se mnoho operací děje asynchronně, aby aplikace nezamrzala (hlavně při spojení se vzdálenými servery). Tento způsob běhu aplikace bohužel znemožňuje testování jednotkovými testy. Asynchronní volání by se dalo rozepsat do těchto kroků:
+
+1. handler údalosti zavolá metodu na controlleru
+2. controller získá potřebná data z databáze a naparsuje je pro potřeby daného serveru
+3. pak zavolá metodu *send()* nebo *sendFile()* (pokud se odesílá soubor) na vytvořeném HTTP klientovi. Zároveň mu předá název funkce, kam chce dostat výsledek volání, tzv. callback
+4. klient zavolá server s danými parametry a čeká na odpověď
+5. po tom, co získá odpověď od serveru, ji naparsuje a pošle zpět controlleru na callback, který od něj získal
+6. controller zpracuje odpověď od klienta
+
+Problém, který zabraňuje testování, vzniká v kroku č.3 - předání callbacku. Během testování se o volání metod stará běhové prostředí a není možné volat jednotlivé metody (testy) samostatně. Proto se nemůžeme "vrátit" z HTTP klienta zpět do testu a vyhodnotit správnost odpovědi - nemáme jak.
 
 ## Zátěžové testy ##
 (grafy zavislosti poctu issues na jejich vypis)
 
 ## Doporučení do dalšího vývoje ##
-(na zaklade testu)
+Zátěžové testy nám ukázaly, že aplikace se stává poměrně pomalou s přibývajícími úkoly v jednotlivých projektech. Problém tkví ve čtení dat z databáze. Řešením by mohla být nějaká vyrovnávací paměť (cache), která by byla umístěna mezi databází a zbytkem aplikace. To s sebou nutně přinese mnoho dalších komplikací a zrychlení aplikace tak může být poměrně drahé. Mezi největší problémy patří určitě volba úložiště vyrovnávací paměti a také její invalidace (smazání neaktuálních dat). Úložiště musí být dostatečně rychle přístupné, aby vůbec mělo smysl vyrovnávací paměť implementovat. Nasnadě je využití souborové cache, ale čtení dat z filesystému nemusí být zrovna nejrychlejší. Lepší by bylo ukládání dat do operační paměti, jenže k té nemá JavaScript přístup. Dalším problémem je invalidace cache, tedy odstranění neaktuálních dat z paměti. Je totiž poměrně velký problém určit, kdy už data nejsou aktuální.
