Texty - rozsireni architektury

--- a/texts/markdown/04. architektura.md
+++ b/texts/markdown/04. architektura.md
@@ -7,7 +7,43 @@ Celá aplikace využívá ke svému běhu knihovnu PrototypeJS, díky které lze
 
 Následující diagram znázorňuje rozdělení aplikace do balíčků.
 
-> Class diagram.eps
+> Class model.eps
+
+### Controller ###
+Balíček tříd, které se starají o samotný běh aplikace a synchronizaci se vzdálenými servery.
+
+#### Application ####
+Tato třída je využívána hlavně při startu aplikace. Má dva hlavní úkoly - načíst a naparsovat konfigurační soubor, který je uložený ve formátu JSON, a založit připojení k databázi.
+
+#### Sync ####
+Synchronizace mezi aplikací a vzdálenými servery má na starosti právě tato třída. Přijímá nové objekty z dialogů, předává je do modelové části a stará se o volání odpovídajících API (podle typu projektu). Žádná velká logika v ní není, stará se hlavně o předávání požadavků do jiných vrstev aplikace (model a view).
+
+### Model ###
+Balíček tříd, které se starají o komunikaci s databází.
+
+#### Model ####
+V této třídě jsou umístěny všechny metody, které přímo komunikují s databází. Největší skupinou metod jsou ty, které poskytují CRUD (create, read, update, delete) nad všemi entitami, zastoupenými v systému. Zároveň je zde několik metod, které usnadňují často používané funkce, jako je načítání štítků ke konkrétnímu úkolu nebo zjištění procentuálního dokončení jednotlivých projektů.
+
+### API's ###
+Balíček tříd, které jsou používány při komunikaci se vzdálenými servery.
+
+#### xxxAPI ####
+Třídy se sufixem "API" jsou v systému celkem tři (AssemblaAPI, GCodeAPI a GitHubAPI). Každá odpovídá jednomu verzovacímu serveru, se kterým je systém synchronizovatelný. Všechny mají společného předka - abstraktní třídu API - a to z důvodu usnadnění budoucího rozšíření aplikace o další servery. Bohužel v JavaScriptu není implementace dědění úplně dokonalá, takže jde spíš o doporučení než povinnost.
+
+#### Ajax_client ####
+Tato třída je spolu s tou následující dalším usnadněním budoucího rozšiřování aplikace o spolupráci s dalšími servery. Slouží k odesílání požadavků v podobě AJAXových volání. V momentálním stavu aplikace ji využívá pouze API služby GitHub. Na vstup získává požadavek ve formátu JSON a odesílá ji na stanovenou URL adresu pomocí zvolené metody (POST, PUT, DELETE).
+
+#### REST_client ####
+Protože zbylé dva servery, tzn. Assembla a Google Code, fungují na architektuře označované jako REST (REpresentational State Transfer) bylo nutné vytvořit druhého klienta, který usnadní komunikaci s těmito servery. Požadavky jsou narozdíl od předchozí třídy ve formátu XML souboru.
+
+### View ###
+Balíček tříd, které mění vizuální stránku aplikace.
+
+#### Viewer ####
+V rámci dodržení architektury MVC došlo k oddělení vytváření vizuální stránky aplikace do samostatné třídy. Ta se stará o výpis seznamu úkolů, projektů a dalších grafických prvků. Grafická stránka aplikace je vytvářena na základě několika šablon, které jsou uloženy v samostatných souborech, aby bylo možné je v budoucnu snadno pozměnit bez ovlivnění funkčnosti aplikace. Takže například výpis úkolů je složen z x částí, kde každá část pochází z jedné šablony, která se opakuje.
+
+### Objects ###
+Balíček tříd, které reprezentují jednotlivé entity v systému. Třídy byly již popsány v sekci Metodika - Doménový model.
 
 ## Bezpečnost ##
 
