Texty - zacatek zhodnoceni

--- a/texts/markdown/07. zhodnoceni.md
+++ b/texts/markdown/07. zhodnoceni.md
@@ -1,5 +1,9 @@
-# Zaverecne zhodnoceni aplikace #
-## prace s TS ##
-## psani aplikace zcela v JS ##
-## nove funkce do budoucna ##
+# Závěrečné zhodnocení aplikace #
+Zhodnocení aplikace z pohledu splnění požadavků je snadné, stačí si projít user stories z části týkající se metodiky a hned bude jasné, které byly naplněny a které nikoliv. Pokud tedy použijeme tento postup, dostaneme 95% splnění požadavků. V aplikaci chybí párování úkolů a jednotlivých commitů ze vzdáleného serveru. Analýza totiž ukázala, že tuto možnost má pouze GitHub, ostatní ji neposkytují, proto od ní bylo upuštěno a nebyla zahrnuta do aplikace.
+
+## Práce s IDE Titanium Studio ##
+Součástí této práce je i rešerše Titanium Studia. 
+
+## Psaní aplikace zcela v JavaScriptu ##
+## Nové funkce do budoucna ##
 ## zminit se o clanku na Programujte.com ##
